--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ h3 {
     color:#A26769;
 }
 body{
-    background-image: url(background.JPG);
+    background-image: url(background.jpg);
     background-size:cover;
 }
 header {
